--- a/discussion/index.html
+++ b/discussion/index.html
@@ -9,9 +9,6 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    
-	<!-- WD078-17-C1 | OpenClass Quiz and Activity -->
-	<!-- ==> submit your project discussion repo from last night -->
 
 	<div class="m-5">
 		<h2>Repetition Control Structures</h2>
@@ -35,7 +32,7 @@
 
 			<div class="col-4">
 				<div class="form-group">
-					<label for="task2">Do While Loop</label>
+					<label for="task2">Do-While Loop</label>
 
 					<!-- get the user info -->
 					<input type="number" name="" id="task2" class="form-control">
@@ -61,6 +58,19 @@
 
 				</div>
 			</div>
+		</div>
+
+		<div class="row">
+			<div class="form-group">
+				<h1>Accessing Elements of a string</h1>
+				
+				<!-- for the user's input -->
+				<input type="text" name="name" id="userName" placeholder="Insert Name Here" class="form-control">
+
+				<!-- start the process -->
+				<button type="submit" id="getString" class="btn btn-primary" onclick="accessElementsInString()">Get Letters of the Name</button></div>
+
+				<p class=" mt-4 text-success" id="stringLength"></p>
 		</div>
 	</div>
 
